@@ -1,3 +1,7 @@
+2012-04-26	Dennis Ahrens	<dennis.ahrens@fh-hannover.de>
+
+	* Corrected wrong classes, that break with the automatic injection of extbase 4.7 (thanks to Adrien Crivelli)
+
 2011-03-18  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Removed no ExtDirect code
